Fix the column spacing in the address table

--- a/src/components/address/styles.pcss
+++ b/src/components/address/styles.pcss
@@ -43,3 +43,9 @@
 		letter-spacing: -0.64px;
 	}
 }
+
+@media (max-width: 640px) {
+	.address {
+		padding: var(--space-m) var(--space-m) var(--space-xxxxxl) var(--space-m);
+	}
+}
